Migrated most to new architecture
