# network_builder/api/v1alpha1/pysrc/circuitlibrary.py
@@ -7,8 +7,10 @@ from . import Metadata, Y_NAME
 
 from .constants import *
 Y_NODES = 'nodes'
-Y_NODESELECTOR = 'nodeSelector'
-Y_LOGINBANNER = 'loginBanner'
+Y_PORTA = 'portA'
+Y_PORTB = 'portB'
+Y_SUPERNET = 'supernet'
+Y_SUBNETS = 'subnets'
 # Package objects (GVK Schemas)
 CIRCUITLIBRARY_SCHEMA = eda.Schema(group='network-builder.eda.local', version='v1alpha1', kind='CircuitLibrary')
 
@@ -17,33 +19,45 @@ class CircuitLibrarySpec:
     def __init__(
         self,
         nodes: list[str] | None = None,
-        nodeSelector: list[str] | None = None,
-        loginBanner: str | None = None,
+        portA: list[str] | None = None,
+        portB: list[str] | None = None,
+        supernet: list[str] | None = None,
+        subnets: list[str] | None = None,
     ):
         self.nodes = nodes
-        self.nodeSelector = nodeSelector
-        self.loginBanner = loginBanner
+        self.portA = portA
+        self.portB = portB
+        self.supernet = supernet
+        self.subnets = subnets
 
     def to_input(self):  # pragma: no cover
         _rval = {}
         if self.nodes is not None:
             _rval[Y_NODES] = self.nodes
-        if self.nodeSelector is not None:
-            _rval[Y_NODESELECTOR] = self.nodeSelector
-        if self.loginBanner is not None:
-            _rval[Y_LOGINBANNER] = self.loginBanner
+        if self.portA is not None:
+            _rval[Y_PORTA] = self.portA
+        if self.portB is not None:
+            _rval[Y_PORTB] = self.portB
+        if self.supernet is not None:
+            _rval[Y_SUPERNET] = self.supernet
+        if self.subnets is not None:
+            _rval[Y_SUBNETS] = self.subnets
         return _rval
 
     @staticmethod
     def from_input(obj) -> 'CircuitLibrarySpec | None':
         if obj:
             _nodes = obj.get(Y_NODES)
-            _nodeSelector = obj.get(Y_NODESELECTOR)
-            _loginBanner = obj.get(Y_LOGINBANNER)
+            _portA = obj.get(Y_PORTA)
+            _portB = obj.get(Y_PORTB)
+            _supernet = obj.get(Y_SUPERNET)
+            _subnets = obj.get(Y_SUBNETS)
             return CircuitLibrarySpec(
                 nodes=_nodes,
-                nodeSelector=_nodeSelector,
-                loginBanner=_loginBanner,
+                portA=_portA,
+                portB=_portB,
+                supernet=_supernet,
+                subnets=_subnets,
             )
         return None  # pragma: no cover
 
